--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -47,10 +47,10 @@
       </div>
 
       <div class="form-options">
-        <label class="remember-me">
+        <!-- <label class="remember-me">
           <input type="checkbox" [(ngModel)]="user.remember" name="remember">
-          <span>Remember me</span>
-        </label>
+          <span>Remember me</span>]
+        </label> -->
         <a href="#" class="forgot-password">Forgot password?</a>
       </div>
 
